# mcc

./: .gitignore  CMakeLists.txt  README.md  driver.hh  exceptions.hh  parser.y  scanner.l  scope_tracker.hh  test.c  visitor.hpp
.githooks/: pre-commit.sh
scripts/: install_precommit_hook.sh
